js/src/test/base/errors/test.OrderNotFound.d.ts
declare const _default: (exchange: any, symbol: any) => Promise<void>;
export default _default;
